--- a/app/src/main/res/layout/lorentz_calc.xml
+++ b/app/src/main/res/layout/lorentz_calc.xml
@@ -27,7 +27,7 @@
         android:gravity="center"
         android:hint="Enter Speed of Object in m/sec"
         android:inputType="numberSigned|numberDecimal"
-        android:textColor="@color/black"
+        android:textColor="#FFD600"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.533"
@@ -76,7 +76,7 @@
             android:background="#00B8D4"
             android:gravity="center"
             android:text="LORENTZ FACTOR PRACTISE SESSION"
-            android:textSize="25sp"
+            android:textSize="22sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -93,7 +93,7 @@
             android:gravity="center"
             android:hint="Enter Speed of Object in m/sec"
             android:inputType="numberSigned|numberDecimal"
-            android:textColor="@color/black"
+            android:textColor="#FFD600"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -110,7 +110,7 @@
             android:gravity="center"
             android:hint="Enter expected LORENTZ FACTOR value "
             android:inputType="numberSigned|numberDecimal"
-            android:textColor="@color/black"
+            android:textColor="#FFD600"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
